--- a/app/Resources/views/snippets/footer.html.twig
+++ b/app/Resources/views/snippets/footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <div id="footer-primary">
-            <span class="">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2017 Hotstat.us <span class="d-none d-md-inline"><i class="fa fa-gg footer-sep" aria-hidden="true"></i> <a href="{{ path("contact") }}">Contact</a> <i class="fa fa-gg footer-sep" aria-hidden="true"></i> <a href="{{ path("faq") }}">F.A.Q.</a> </span>               <i class="fa fa-gg footer-sep" aria-hidden="true"></i> <a href="https://www.patreon.com/hotstatus" target="_blank">Support Hotstat.us on Patreon!</a> <i id="footer-heart" class="fa fa-heart" aria-hidden="true"></i></span>
+            <span class="">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2018 Hotstat.us <span class="d-none d-md-inline"><i class="fa fa-gg footer-sep" aria-hidden="true"></i> <a href="{{ path("contact") }}">Contact</a> {#<i class="fa fa-gg footer-sep" aria-hidden="true"></i> <a href="{{ path("faq") }}">F.A.Q.</a> #}</span>               <i class="fa fa-gg footer-sep" aria-hidden="true"></i> <a href="https://www.patreon.com/hotstatus" target="_blank">Support Hotstat.us on Patreon!</a> <i id="footer-heart" class="fa fa-heart" aria-hidden="true"></i></span>
         </div>
         <div id="footer-secondary">
             <span class="d-none d-md-inline">Heroes of the Storm is a trademark of Blizzard Entertainment, Inc.</span>
