--- a/app/Resources/views/snippets/advertising/responsive_vertical.html.twig
+++ b/app/Resources/views/snippets/advertising/responsive_vertical.html.twig
@@ -1,4 +1,4 @@
-<ins class="adslot_vertical adslot_vertical_1"
+{#<ins class="adslot_vertical adslot_vertical_1"
      data-ad-client="ca-pub-7109973858720398"
      data-ad-slot="2598472366"
-     data-ad-format="vertical"></ins>
+     data-ad-format="vertical"></ins>#}
