--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -53,6 +53,10 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">News (2018-01-16):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Updated filters to include new 2.29.8 Tyrael Patch, cycling out oldest 2.28.0 Ana patch.</li>
+                        </ul>
                         <h5 class="news-blog-header">News (2018-01-09):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated filters to include new 2.29.7 Blaze Patch, cycling out oldest 2.27.5 Balance patch.</li>
