--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -53,6 +53,10 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">News (2018-02-21):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Updated filters to include new 2.30.3 Balance Patch, cycling out oldest 2.29.0 Alexstrasza patch.</li>
+                        </ul>
                         <h5 class="news-blog-header">News (2018-02-09):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated filters to include new 2.30.1 Balance Patch, cycling out oldest 2.28.5 Balance patch.</li>
