--- a/app/Resources/views/snippets/advertising/responsive_horizontal_inner.html.twig
+++ b/app/Resources/views/snippets/advertising/responsive_horizontal_inner.html.twig
@@ -1,4 +1,4 @@
-{#<ins class="adsbygoogle adslot_horizontal adslot_horizontal_2"
+<ins class="adsbygoogle adslot_horizontal adslot_horizontal_2"
      data-ad-client="ca-pub-7109973858720398"
      data-ad-slot="8620955239"
-     data-ad-format="horizontal"></ins>#}
+     data-ad-format="horizontal"></ins>
