sonya hotfix patch

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -53,6 +53,10 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">(2018-03-09):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Updated filters to include new 2.30.5 Hotfix Patch, cycling out oldest 2.29.3 Hanzo patch.</li>
+                        </ul>
                         <h5 class="news-blog-header">(2018-03-06):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated filters and player tracking for 2018 Season 2.</li>
