--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -41,10 +41,10 @@
                         <hr/>
                         Check back here in the future for any news regarding updates to the site!
                         <hr/>
-                        <div class="d-inline-block"><h5>{{ processedReplays }}</h5></div> replays have been processed for over <div class="d-inline-block"><h5>1,060,000</h5></div> unique players since September 2017!
+                        <div class="d-inline-block"><h5>{{ processedReplays }}</h5></div> replays have been processed for over <div class="d-inline-block"><h5>1,560,000</h5></div> unique players since September 2017!
                         {% if queuedReplays_raw > 0 %}<br><br><div class="d-inline-block"><h5>{{ queuedReplays }}</h5></div> replays currently queued for processing.{% endif %}
                         <hr/>
-                        <span style="color:#77ff86;">You can support development through <a class="email" href="https://www.paypal.me/hotstatus/5" target="_blank">Donation</a>, or by disabling your Adblocker!</span>
+                        <span style="color:#77ff86;">You can support Hotstat.us through <a class="email" href="https://www.paypal.me/hotstatus/2" target="_blank">Donation</a>!</span>
                         <hr/>
                         {% if outage['exists'] == true %}
                         <h5><a style="color:#FF0000;">Service Disruption:</a></h5>
@@ -53,6 +53,10 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">(2018-03-21):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Updated filters to include new 2.30.6 Balance Patch, cycling out oldest 2.29.5 Balance patch.</li>
+                        </ul>
                         <h5 class="news-blog-header">(2018-03-09):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated filters to include new 2.30.5 Hotfix Patch, cycling out oldest 2.29.3 Hanzo patch.</li>
