--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -53,29 +53,33 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">(2018-03-27):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Updated to include new 2.31.0 Fenix Patch, cycling out oldest 2.29.7 Blaze patch.</li>
+                        </ul>
                         <h5 class="news-blog-header">(2018-03-21):</h5>
                         <ul class="news-blog-bullet">
-                            <li>Updated filters to include new 2.30.6 Balance Patch, cycling out oldest 2.29.5 Balance patch.</li>
+                            <li>Updated to include new 2.30.6 Balance Patch, cycling out oldest 2.29.5 Balance patch.</li>
                         </ul>
                         <h5 class="news-blog-header">(2018-03-09):</h5>
                         <ul class="news-blog-bullet">
-                            <li>Updated filters to include new 2.30.5 Hotfix Patch, cycling out oldest 2.29.3 Hanzo patch.</li>
+                            <li>Updated to include new 2.30.5 Hotfix Patch, cycling out oldest 2.29.3 Hanzo patch.</li>
                         </ul>
                         <h5 class="news-blog-header">(2018-03-06):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated filters and player tracking for 2018 Season 2.</li>
-                            <li>Updated filters to include new 2.30.4 Rework Patch, cycling out oldest 2.29.2 Balance patch.</li>
+                            <li>Updated to include new 2.30.4 Rework Patch, cycling out oldest 2.29.2 Balance patch.</li>
                             <li>Reduced filter caching times to 3 hours, so that frequently requested pages can have fresh data computed more often.</li>
                         </ul>
                         <h5 class="news-blog-header">(2018-02-21):</h5>
                         <ul class="news-blog-bullet">
-                            <li>Updated filters to include new 2.30.3 Balance Patch, cycling out oldest 2.29.0 Alexstrasza patch.</li>
+                            <li>Updated to include new 2.30.3 Balance Patch, cycling out oldest 2.29.0 Alexstrasza patch.</li>
                         </ul>
                         <h5 class="news-blog-header">(2018-02-09):</h5>
                         <ul class="news-blog-bullet">
-                            <li>Updated filters to include new 2.30.1 Balance Patch, cycling out oldest 2.28.5 Balance patch.</li>
+                            <li>Updated to include new 2.30.1 Balance Patch, cycling out oldest 2.28.5 Balance patch.</li>
                         </ul>
-                        <h5 class="news-blog-header">(2018-02-06):</h5>
+                        {#<<h5 class="news-blog-header">(2018-02-06):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated filters to include new 2.30.0 Maiev Patch, cycling out oldest 2.28.3 Junkrat patch.</li>
                         </ul>
@@ -83,7 +87,7 @@
                         <ul class="news-blog-bullet">
                             <li>Updated filters to include new 2.29.9 Balance Patch, cycling out oldest 2.28.2 Balance patch.</li>
                         </ul>
-                        {#<h5 class="news-blog-header">News (2018-01-16):</h5>
+                        <h5 class="news-blog-header">News (2018-01-16):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated filters to include new 2.29.8 Tyrael Patch, cycling out oldest 2.28.0 Ana patch.</li>
                         </ul>
