--- a/app/Resources/views/snippets/heroes/filter/dropdown/select/maps.html.twig
+++ b/app/Resources/views/snippets/heroes/filter/dropdown/select/maps.html.twig
@@ -1,8 +1,8 @@
-<select class="selectpicker filter-selector filter-selector-map" data-actions-box="true" data-width="305px" title="No Maps Selected"
-        data-selected-text-format="count > 14" data-count-selected-text="{0} of {1} Maps Selected" data-multiple-separator=""
-        data-select-all-text="<i class='fa fa-check-square-o fa-2x' style='' aria-hidden='true'></i>" multiple>
+{% set selectOnce = true %}
+<select class="selectpicker filter-selector filter-selector-map" data-width="305px" title="No Maps Selected"
+        data-max-options="1" data-max-options-text="Max 1 Selection" multiple>
     {% for key, map in filter_maps %}
-        <option {% if map.selected == true %}selected="selected"{% endif %}
+        <option {% if map.selected == true and selectOnce %}{% set selectOnce = false %}selected="selected"{% endif %}
                 title="<img class='filter-dropdown-image-map filter-dropdown-image-map-title' src='{{ asset('/ui/map_icon_'~map.name_sort~'.png', 'images') }}'>"
                 data-content="<img class='filter-dropdown-image-map filter-dropdown-image-margin-right-8' src='{{ asset('/ui/map_icon_'~map.name_sort~'.png', 'images') }}'>{{ key }}"
                 value="{{ map.value }}">{{ key }}</option>
