--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,10 @@
             }
         </script>
         <meta charset="UTF-8" />
+        <meta name="application-name" content="Hotstat.us">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Hotstat.us is a web application with which you can view Heroes of the Storm statistics parsed from player-submitted replay files. View your favorite hero's stats, or visit your own personal player page to see your recent matches, hero, and map statistics. ">
+        <meta name="keywords" content="Heroes of the Storm, HotS, statistics, stat, stats, player, hero, heroes, storm, hotstat, hotstatus, hotstat.us, moba, dota, aeon of strife, blizzard, warcraft, diablo, starcraft, overwatch, the lost vikings, patch, patches, filter, aggregation, aggregate, analytics, win, winrate, play, playrate, video-game, video, game, talent, talents, matchups, profile, party, op, gg">
         <title>Hotstat.us{% block title %}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
