Removed angel supporter, added aysnc to share this

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -20,13 +20,13 @@
 {% block body %}
     {# Begin HTML #}
     <div class="container-fluid">
-        {#<div class="row">
+        <div class="row">
             <div class="col">
                 <div class="text-center">
                     {% include ':snippets:advertising/responsive_horizontal.html.twig' %}
                 </div>
             </div>
-        </div>#}
+        </div>
         <div class="row">
             <div class="col-xl-2"></div>
             <div class="col-12 col-xl-8">
@@ -56,7 +56,7 @@
                         <h5 class="news-blog-header">(2018-04-24):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.32.0 Deckard Patch, cycling out oldest 2.30.6 Balance patch.</li>
-                            <li>Added examples of the Patreon Angel Supporter tier.</li>
+                            <li>Added 'Angel Supporter' Patreon tier.</li>
                         </ul>
                         <h5 class="news-blog-header">(2018-04-12):</h5>
                         <ul class="news-blog-bullet">
@@ -68,7 +68,7 @@
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.31.0 Fenix Patch, cycling out oldest 2.29.7 Blaze patch.</li>
                         </ul>
-                        <hr/>
+                        {#<hr/>
                         <div class="text-center">
                             <span><a class="email" style="font-size:24px;" href="https://www.patreon.com/hotstatus" target="_blank">Patreon Angel Supporters</a></span>
                             <br><br>
@@ -86,7 +86,7 @@
                                     <a href="https://www.reddit.com/r/heroesofthestorm/" target="_blank"><img src="{{ asset('/ui/angelsupporter.png', 'images') }}"></a>
                                 </div>
                             </div>
-                        </div>
+                        </div>#}
                         {#<h5 class="news-blog-header">(2018-03-21):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.30.6 Balance Patch, cycling out oldest 2.29.5 Balance patch.</li>
@@ -164,9 +164,9 @@
                     </div>
                 </div>
             </div>
-            {#<div class="col-xl-2">
+            <div class="col-xl-2">
                 {% include ':snippets:advertising/responsive_vertical.html.twig' %}
-            </div>#}
+            </div>
         </div>
     </div>
 {% endblock %}
